# jvnchecker

./: README.md  pyproject.toml  requirements.txt
jvnchecker/: jvnchecker.py
jvnchecker/src/jvnchecker/: jvnchecker.py  parameters.py  resource.py  response.py
tests/: test_jvnchecker.py
tests/test_xml/: VendorList.xml  VulnDetailInfo.xml  VulnDetailInfo2.xml  VulnOverviewList.xml
